[ITSD-5] refactor: remove some unused server, update metadataformat of plugins