@@ -1,991 +1,890 @@
 package kostovite;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.text.DecimalFormat;
-import java.text.NumberFormat;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URL;
+import java.text.DecimalFormat;
+import java.text.NumberFormat;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+
+
+// Assuming PluginInterface is standard
 public class PercentageCalculator implements PluginInterface {
 
-    private static final DecimalFormat DEFAULT_FORMAT = new DecimalFormat("#,##0.##");
+    // Formatting
+    private static final DateTimeFormatter INPUT_DATETIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    private static final DecimalFormat DEFAULT_FORMAT = new DecimalFormat("#,##0.######"); // Increased precision default
     private static final DecimalFormat PERCENTAGE_FORMAT = new DecimalFormat("#,##0.##'%'");
+    private static final Locale DEFAULT_LOCALE = Locale.US;
+
+    // APIs and Caching
     private static final String EXCHANGE_RATE_API_URL = "https://open.er-api.com/v6/latest/";
-    private static final String INTEREST_RATE_API_URL = "https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v2/accounting/od/avg_interest_rates";
+    // private static final String INTEREST_RATE_API_URL = "https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v2/accounting/od/avg_interest_rates?sort=-record_date&limit=1";
 
     private final ObjectMapper objectMapper = new ObjectMapper();
-    private Map<String, Double> exchangeRates = new HashMap<>();
-    private Map<String, Double> interestRates = new HashMap<>();
-    private long lastExchangeRateUpdate = 0;
-    private long lastInterestRateUpdate = 0;
-    private static final long CACHE_DURATION = 3600000; // 1 hour in milliseconds
+    private final Map<String, Double> exchangeRatesCache = new ConcurrentHashMap<>();
+    private final Map<String, Double> interestRatesCache = new ConcurrentHashMap<>();
+    private volatile long lastExchangeRateUpdate = 0;
+    private volatile long lastInterestRateUpdate = 0;
+    private static final long CACHE_DURATION_MS = 3600000; // 1 hour
 
+    /**
+     * Internal name, should match the class for routing.
+     */
     @Override
     public String getName() {
         return "PercentageCalculator";
     }
 
+    /**
+     * Standalone execution for testing.
+     */
     @Override
     public void execute() {
-        System.out.println("Percentage Calculator Plugin executed");
-
-        // Demonstrate basic usage
+        System.out.println("Percentage Calculator Plugin executed (standalone test)");
         try {
             // Example percentage calculation
             Map<String, Object> params = new HashMap<>();
-            params.put("operation", "percentOf");
-            params.put("percentage", 15);
-            params.put("value", 200);
-
+            params.put("uiOperation", "percentOf");
+            params.put("percentage", 15.0);
+            params.put("value", 200.0);
             Map<String, Object> result = process(params);
-            System.out.println("15% of 200 = " + result.get("result"));
+            System.out.println("percentOf Result: " + result);
 
             // Example compound interest calculation
-            Map<String, Object> compoundParams = new HashMap<>();
-            compoundParams.put("operation", "compoundInterest");
-            compoundParams.put("principal", 10000);
-            compoundParams.put("rate", 5);
-            compoundParams.put("years", 5);
-            compoundParams.put("compoundingPerYear", 12);
+            params.clear();
+            params.put("uiOperation", "compoundInterest");
+            params.put("principal", 10000.0);
+            params.put("rate", 5.0); // 5%
+            params.put("years", 5.0);
+            params.put("compoundingPerYear", 12); // Monthly
+            result = process(params);
+            System.out.println("compoundInterest Result: " + result);
 
-            Map<String, Object> compoundResult = process(compoundParams);
-            System.out.println("Compound Interest Result: " + compoundResult.get("formattedFutureValue"));
+            // Example currency conversion
+            params.clear();
+            params.put("uiOperation", "convertCurrency");
+            params.put("amount", 100.0);
+            params.put("fromCurrency", "USD");
+            params.put("toCurrency", "GBP");
+            result = process(params);
+            System.out.println("convertCurrency Result: " + result);
+
+            // Example get rates
+            params.clear();
+            params.put("uiOperation", "getExchangeRates");
+            params.put("baseCurrency", "EUR");
+            result = process(params);
+            System.out.println("getExchangeRates Result (Base EUR): " + result);
+
 
         } catch (Exception e) {
+            System.err.println("Standalone test failed: " + e.getMessage());
             e.printStackTrace();
         }
     }
 
+    /**
+     * Generates metadata in the NEW format (sections, id, etc.).
+     */
     @Override
     public Map<String, Object> getMetadata() {
         Map<String, Object> metadata = new HashMap<>();
-        metadata.put("name", getName());
-        metadata.put("version", "1.0.0");
-        metadata.put("description", "Calculate various percentage and financial calculations");
 
-        // Define available operations
-        Map<String, Object> operations = new HashMap<>();
+        // --- Top Level Attributes (New Format) ---
+        metadata.put("id", "PercentageCalculator");
+        metadata.put("name", "Financial & Percentage Calculator"); // Updated Name
+        metadata.put("description", "Perform various percentage, financial (interest, loans, savings), and currency calculations.");
+        metadata.put("icon", "Calculate"); // Changed icon
+        metadata.put("category", "Finance");
+        metadata.put("customUI", false);
+        metadata.put("triggerUpdateOnChange", false); // Requires manual submit
 
-        // Basic percentage operations
-        definePercentageOperations(operations);
+        // --- Sections ---
+        List<Map<String, Object>> sections = new ArrayList<>();
 
-        // Financial calculations
-        defineFinancialOperations(operations);
+        // --- Section 1: Operation Selection ---
+        Map<String, Object> operationSection = new HashMap<>();
+        operationSection.put("id", "operationSelection");
+        operationSection.put("label", "Select Calculation Type");
 
-        // Currency operations
-        defineCurrencyOperations(operations);
+        List<Map<String, Object>> operationInputs = new ArrayList<>();
+        operationInputs.add(Map.ofEntries(
+                Map.entry("id", "uiOperation"),
+                Map.entry("label", "Calculation Type:"),
+                Map.entry("type", "select"),
+                Map.entry("options", List.of( // Keep all operations
+                        Map.of("value", "percentOf", "label", "X% of Y"),
+                        Map.of("value", "percentage", "label", "X is What % of Y?"),
+                        Map.of("value", "percentageChange", "label", "Percentage Change"),
+                        Map.of("value", "compoundInterest", "label", "Compound Interest"),
+                        Map.of("value", "simpleInterest", "label", "Simple Interest"),
+                        Map.of("value", "loanPayment", "label", "Loan Payment (Mortgage)"),
+                        Map.of("value", "savingsGoal", "label", "Savings Goal Contribution"),
+                        Map.of("value", "convertCurrency", "label", "Currency Conversion"),
+                        Map.of("value", "getExchangeRates", "label", "Get Exchange Rates"),
+                        Map.of("value", "getCurrentRates", "label", "Get US Interest Rates (Approx)")
+                )),
+                Map.entry("default", "percentOf"),
+                Map.entry("required", true)
+        ));
+        operationSection.put("inputs", operationInputs);
+        sections.add(operationSection);
 
-        metadata.put("operations", operations);
+        // --- Section 2: Input Parameters (Conditional Fields) ---
+        Map<String, Object> paramsSection = new HashMap<>();
+        paramsSection.put("id", "parameters");
+        paramsSection.put("label", "Input Parameters");
+        // Conditional visibility based on operation selection
+
+        List<Map<String, Object>> paramInputs = new ArrayList<>();
+
+        // == Inputs for Basic Percentage ==
+        paramInputs.add(createInputField("percentage", "Percentage (%):", "number", "uiOperation === 'percentOf'", 10.0, true));
+        paramInputs.add(createInputField("value", "Value (X or Y):", "number", "uiOperation === 'percentOf' || uiOperation === 'percentage'", 100.0, true));
+        paramInputs.add(createInputField("ofValue", "Of Value (Y):", "number", "uiOperation === 'percentage'", 100.0, true));
+        paramInputs.add(createInputField("fromValue", "From Value:", "number", "uiOperation === 'percentageChange'", 100.0, true));
+        paramInputs.add(createInputField("toValue", "To Value:", "number", "uiOperation === 'percentageChange'", 120.0, true));
+
+        // == Inputs for Financial Calcs ==
+        String financialCondition = "uiOperation === 'compoundInterest' || uiOperation === 'simpleInterest' || uiOperation === 'loanPayment'";
+        paramInputs.add(createInputField("principal", "Principal Amount:", "number", financialCondition, 1000.0, true));
+        paramInputs.add(createInputField("rate", "Annual Rate (%):", "number", financialCondition + " || uiOperation === 'savingsGoal'", 5.0, true));
+        paramInputs.add(createInputField("years", "Years:", "number", financialCondition + " || uiOperation === 'savingsGoal'", 10.0, true));
+
+        // Compounds per Year (Compound Interest, Savings Goal)
+        Map<String, Object> compoundingField = createInputField("compoundingPerYear", "Compounds per Year:", "number", "uiOperation === 'compoundInterest' || uiOperation === 'savingsGoal'", 12, false);
+        compoundingField.put("helperText", "e.g., 1=Annual, 4=Quarterly, 12=Monthly");
+        compoundingField.put("min", 1);
+        paramInputs.add(compoundingField);
+
+        // Payments per Year (Loan Payment)
+        Map<String, Object> paymentsField = createInputField("paymentsPerYear", "Payments per Year:", "number", "uiOperation === 'loanPayment'", 12, false);
+        paymentsField.put("helperText", "e.g., 12=Monthly, 52=Weekly");
+        paymentsField.put("min", 1);
+        paramInputs.add(paymentsField);
+
+        // Savings Goal Specific
+        paramInputs.add(createInputField("goal", "Savings Goal Amount:", "number", "uiOperation === 'savingsGoal'", 10000.0, true));
+        paramInputs.add(createInputField("initialDeposit", "Initial Deposit:", "number", "uiOperation === 'savingsGoal'", 0.0, false));
+
+        // == Inputs for Currency ==
+        paramInputs.add(createInputField("amount", "Amount:", "number", "uiOperation === 'convertCurrency'", 100.0, true));
+        Map<String, Object> fromCurrencyField = createInputField("fromCurrency", "From Currency:", "text", "uiOperation === 'convertCurrency'", "USD", true);
+        fromCurrencyField.put("placeholder", "e.g., USD, EUR, GBP");
+        paramInputs.add(fromCurrencyField);
+        Map<String, Object> toCurrencyField = createInputField("toCurrency", "To Currency:", "text", "uiOperation === 'convertCurrency'", "EUR", true);
+        toCurrencyField.put("placeholder", "e.g., USD, EUR, GBP");
+        paramInputs.add(toCurrencyField);
+        Map<String, Object> baseCurrencyField = createInputField("baseCurrency", "Base Currency:", "text", "uiOperation === 'getExchangeRates'", "USD", false);
+        baseCurrencyField.put("placeholder", "e.g., USD, EUR, GBP");
+        paramInputs.add(baseCurrencyField);
+
+
+        paramsSection.put("inputs", paramInputs);
+        sections.add(paramsSection);
+
+
+        // --- Section 3: Results ---
+        Map<String, Object> resultsSection = new HashMap<>();
+        resultsSection.put("id", "results");
+        resultsSection.put("label", "Calculation Results");
+        resultsSection.put("condition", "success === true"); // Show only on success
+
+        List<Map<String, Object>> resultOutputs = new ArrayList<>();
+
+        // Basic Percentage Results
+        resultOutputs.add(createOutputField("basic_result", "Result", "text", "uiOperation === 'percentOf' || uiOperation === 'percentage'"));
+        resultOutputs.add(createOutputField("change_percent", "Change (%)", "text", "uiOperation === 'percentageChange'"));
+        resultOutputs.add(createOutputField("change_type", "Type", "text", "uiOperation === 'percentageChange'"));
+        resultOutputs.add(createOutputField("change_explanation", "Explanation", "text", "uiOperation === 'percentageChange' && typeof change_explanation !== 'undefined'"));
+
+        // Financial Results
+        resultOutputs.add(createOutputField("fin_futureValue", "Future Value", "text", "(uiOperation === 'compoundInterest' || uiOperation === 'simpleInterest') && typeof fin_futureValue !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_interestEarned", "Total Interest Earned", "text", "(uiOperation === 'compoundInterest' || uiOperation === 'simpleInterest') && typeof fin_interestEarned !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_paymentAmount", "Periodic Payment", "text", "uiOperation === 'loanPayment' && typeof fin_paymentAmount !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_totalInterest", "Total Interest Paid", "text", "uiOperation === 'loanPayment' && typeof fin_totalInterest !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_totalCost", "Total Loan Cost", "text", "uiOperation === 'loanPayment' && typeof fin_totalCost !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_monthlyContribution", "Required Periodic Savings", "text", "uiOperation === 'savingsGoal' && typeof fin_monthlyContribution !== 'undefined'"));
+        resultOutputs.add(createOutputField("fin_message", "Summary", "text", "uiOperation === 'savingsGoal' && typeof fin_message !== 'undefined'"));
+
+        // Currency Results
+        resultOutputs.add(createOutputField("curr_convertedAmount", "Converted Amount", "text", "uiOperation === 'convertCurrency' && typeof curr_convertedAmount !== 'undefined'"));
+        resultOutputs.add(createOutputField("curr_exchangeRate", "Effective Rate", "text", "uiOperation === 'convertCurrency' && typeof curr_exchangeRate !== 'undefined'"));
+
+        // Formula (Common)
+        Map<String, Object> formulaField = createOutputField("formula", "Formula/Method", "text", "typeof formula !== 'undefined'");
+        resultOutputs.add(formulaField);
+
+        // Rate Source Info (Common for API calls)
+        Map<String, Object> sourceField = createOutputField("source", "Data Source", "text", "(uiOperation === 'getExchangeRates' || uiOperation === 'getCurrentRates' || uiOperation === 'convertCurrency') && typeof source !== 'undefined'");
+        resultOutputs.add(sourceField);
+
+
+        // Exchange Rates Table (Output as JSON)
+        Map<String, Object> exchangeRatesJson = createOutputField("api_exchangeRates", "Exchange Rates", "json", "uiOperation === 'getExchangeRates' && typeof api_exchangeRates !== 'undefined'");
+        resultOutputs.add(createOutputField("api_baseCurrency", "Base Currency", "text", "uiOperation === 'getExchangeRates' && typeof api_baseCurrency !== 'undefined'"));
+        resultOutputs.add(exchangeRatesJson);
+
+        // Interest Rates Table (Output as JSON)
+        resultOutputs.add(createOutputField("api_interestRates", "Interest Rates (Approx %)", "json", "uiOperation === 'getCurrentRates' && typeof api_interestRates !== 'undefined'"));
+
+
+        resultsSection.put("outputs", resultOutputs);
+        sections.add(resultsSection);
+
+
+        // --- Section 4: Detailed Tables (e.g., Amortization) ---
+        Map<String, Object> tablesSection = new HashMap<>();
+        tablesSection.put("id", "tables");
+        tablesSection.put("label", "Details / Schedule");
+        tablesSection.put("condition", "success === true && (typeof fin_yearlyBreakdown !== 'undefined' || typeof fin_amortizationSchedule !== 'undefined')"); // Show if table data exists
+
+        List<Map<String, Object>> tableOutputs = new ArrayList<>();
+
+        Map<String, Object> yearlyBreakdownTable = createOutputField("fin_yearlyBreakdown", "Compound Interest Breakdown", "table", "uiOperation === 'compoundInterest' && typeof fin_yearlyBreakdown !== 'undefined'");
+        yearlyBreakdownTable.put("columns", List.of(
+                Map.of("header", "Year", "field", "year"),
+                Map.of("header", "Start Balance", "field", "formattedStartingBalance"),
+                Map.of("header", "Interest", "field", "formattedInterestEarned"),
+                Map.of("header", "End Balance", "field", "formattedEndingBalance")
+        ));
+        tableOutputs.add(yearlyBreakdownTable);
+
+        Map<String, Object> amortizationTable = createOutputField("fin_amortizationSchedule", "Loan Amortization (Sample)", "table", "uiOperation === 'loanPayment' && typeof fin_amortizationSchedule !== 'undefined'");
+        amortizationTable.put("columns", List.of(
+                Map.of("header", "Pmt #", "field", "paymentNumber"),
+                Map.of("header", "Payment", "field", "formattedPaymentAmount"),
+                Map.of("header", "Principal", "field", "formattedPrincipalPayment"),
+                Map.of("header", "Interest", "field", "formattedInterestPayment"),
+                Map.of("header", "Balance", "field", "formattedRemainingBalance")
+        ));
+        tableOutputs.add(amortizationTable);
+
+
+        tablesSection.put("outputs", tableOutputs);
+        sections.add(tablesSection);
+
+
+        // --- Section 5: Error Display ---
+        Map<String, Object> errorSection = new HashMap<>();
+        errorSection.put("id", "errorDisplay");
+        errorSection.put("label", "Error");
+        errorSection.put("condition", "success === false");
+
+        List<Map<String, Object>> errorOutputs = new ArrayList<>();
+        errorOutputs.add(createOutputField("errorMessage", "Details", "text", null)); // style handled by helper
+        errorSection.put("outputs", errorOutputs);
+        sections.add(errorSection);
+
+
+        metadata.put("sections", sections);
         return metadata;
     }
 
-    /**
-     * Define basic percentage operations
-     *
-     * @param operations Operations map to add to
-     */
-    private void definePercentageOperations(Map<String, Object> operations) {
-        // Calculate X% of Y
-        Map<String, Object> percentOfOperation = new HashMap<>();
-        percentOfOperation.put("description", "Calculate what percentage of a value is");
+    // Helper to create input field definitions
+    private Map<String, Object> createInputField(String id, String label, String type, String condition, Object defaultValue, boolean required) {
+        Map<String, Object> field = new HashMap<>();
+        field.put("id", id);
+        field.put("label", label);
+        field.put("type", type);
+        if (required) {
+            field.put("required", true);
+        }
+        if (condition != null && !condition.isEmpty()) {
+            field.put("condition", condition);
+        }
+        if (defaultValue != null) {
+            field.put("default", defaultValue);
+        }
+        if ("number".equals(type)) {
+            field.put("min", 0); // Default min for many financial inputs
+        }
+        return field;
+    }
 
-        Map<String, Object> percentOfInputs = new HashMap<>();
-        percentOfInputs.put("percentage", "Percentage value");
-        percentOfInputs.put("value", "Base value");
-
-        percentOfOperation.put("inputs", percentOfInputs);
-        operations.put("percentOf", percentOfOperation);
-
-        // Calculate what percent X is of Y
-        Map<String, Object> percentageOperation = new HashMap<>();
-        percentageOperation.put("description", "Calculate what percent one value is of another");
-
-        Map<String, Object> percentageInputs = new HashMap<>();
-        percentageInputs.put("value", "The value to find percentage for");
-        percentageInputs.put("ofValue", "The base value");
-
-        percentageOperation.put("inputs", percentageInputs);
-        operations.put("percentage", percentageOperation);
-
-        // Calculate percentage increase/decrease
-        Map<String, Object> percentageChangeOperation = new HashMap<>();
-        percentageChangeOperation.put("description", "Calculate percentage increase or decrease");
-
-        Map<String, Object> percentageChangeInputs = new HashMap<>();
-        percentageChangeInputs.put("fromValue", "Starting value");
-        percentageChangeInputs.put("toValue", "Ending value");
-
-        percentageChangeOperation.put("inputs", percentageChangeInputs);
-        operations.put("percentageChange", percentageChangeOperation);
+    // Helper to create output field definitions
+    private Map<String, Object> createOutputField(String id, String label, String type, String condition) {
+        Map<String, Object> field = new HashMap<>();
+        field.put("id", id);
+        if (label != null && !label.isEmpty()) {
+            field.put("label", label);
+        }
+        field.put("type", type);
+        if (condition != null && !condition.isEmpty()) {
+            field.put("condition", condition);
+        }
+        if (id.toLowerCase().contains("error")) {
+            field.put("style", "error");
+        }
+        if ("text".equals(type) && (id.toLowerCase().contains("formula") || id.toLowerCase().contains("rate") || id.toLowerCase().contains("value") || id.toLowerCase().contains("amount") || id.toLowerCase().contains("cost"))) {
+            field.put("monospace", true);
+        }
+        if ("json".equals(type)) {
+            field.put("buttons", List.of("copy"));
+        }
+        return field;
     }
 
     /**
-     * Define financial calculation operations
-     *
-     * @param operations Operations map to add to
+     * Processes the input parameters (using IDs from the new format)
+     * to perform various calculations.
      */
-    private void defineFinancialOperations(Map<String, Object> operations) {
-        // Compound interest calculation
-        Map<String, Object> compoundInterestOperation = new HashMap<>();
-        compoundInterestOperation.put("description", "Calculate compound interest");
-
-        Map<String, Object> compoundInterestInputs = new HashMap<>();
-        compoundInterestInputs.put("principal", "Initial investment amount");
-        compoundInterestInputs.put("rate", "Annual interest rate (percentage)");
-        compoundInterestInputs.put("years", "Number of years");
-        compoundInterestInputs.put("compoundingPerYear", "Number of times interest is compounded per year (default: 1)");
-
-        compoundInterestOperation.put("inputs", compoundInterestInputs);
-        operations.put("compoundInterest", compoundInterestOperation);
-
-        // Simple interest calculation
-        Map<String, Object> simpleInterestOperation = new HashMap<>();
-        simpleInterestOperation.put("description", "Calculate simple interest");
-
-        Map<String, Object> simpleInterestInputs = new HashMap<>();
-        simpleInterestInputs.put("principal", "Initial amount");
-        simpleInterestInputs.put("rate", "Annual interest rate (percentage)");
-        simpleInterestInputs.put("years", "Number of years");
-
-        simpleInterestOperation.put("inputs", simpleInterestInputs);
-        operations.put("simpleInterest", simpleInterestOperation);
-
-        // Loan payment calculation
-        Map<String, Object> loanPaymentOperation = new HashMap<>();
-        loanPaymentOperation.put("description", "Calculate loan payment amount");
-
-        Map<String, Object> loanPaymentInputs = new HashMap<>();
-        loanPaymentInputs.put("principal", "Loan amount");
-        loanPaymentInputs.put("rate", "Annual interest rate (percentage)");
-        loanPaymentInputs.put("years", "Loan term in years");
-        loanPaymentInputs.put("paymentsPerYear", "Number of payments per year (default: 12)");
-
-        loanPaymentOperation.put("inputs", loanPaymentInputs);
-        operations.put("loanPayment", loanPaymentOperation);
-
-        // Savings goal calculation
-        Map<String, Object> savingsGoalOperation = new HashMap<>();
-        savingsGoalOperation.put("description", "Calculate savings needed for a goal");
-
-        Map<String, Object> savingsGoalInputs = new HashMap<>();
-        savingsGoalInputs.put("goal", "Target amount");
-        savingsGoalInputs.put("rate", "Annual interest rate (percentage)");
-        savingsGoalInputs.put("years", "Number of years");
-        savingsGoalInputs.put("initialDeposit", "Initial deposit amount (default: 0)");
-        savingsGoalInputs.put("compoundingPerYear", "Number of times interest is compounded per year (default: 12)");
-
-        savingsGoalOperation.put("inputs", savingsGoalInputs);
-        operations.put("savingsGoal", savingsGoalOperation);
-
-        // Get current interest rates
-        Map<String, Object> getCurrentRatesOperation = new HashMap<>();
-        getCurrentRatesOperation.put("description", "Get current interest rates");
-        operations.put("getCurrentRates", getCurrentRatesOperation);
-    }
-
-    /**
-     * Define currency-related operations
-     *
-     * @param operations Operations map to add to
-     */
-    private void defineCurrencyOperations(Map<String, Object> operations) {
-        // Currency conversion
-        Map<String, Object> convertCurrencyOperation = new HashMap<>();
-        convertCurrencyOperation.put("description", "Convert amount from one currency to another");
-
-        Map<String, Object> convertCurrencyInputs = new HashMap<>();
-        convertCurrencyInputs.put("amount", "Amount to convert");
-        convertCurrencyInputs.put("fromCurrency", "Source currency code (e.g., USD)");
-        convertCurrencyInputs.put("toCurrency", "Target currency code (e.g., EUR)");
-
-        convertCurrencyOperation.put("inputs", convertCurrencyInputs);
-        operations.put("convertCurrency", convertCurrencyOperation);
-
-        // Get exchange rates
-        Map<String, Object> getExchangeRatesOperation = new HashMap<>();
-        getExchangeRatesOperation.put("description", "Get current exchange rates");
-
-        Map<String, Object> getExchangeRatesInputs = new HashMap<>();
-        getExchangeRatesInputs.put("baseCurrency", "Base currency code (default: USD)");
-
-        getExchangeRatesOperation.put("inputs", getExchangeRatesInputs);
-        operations.put("getExchangeRates", getExchangeRatesOperation);
-    }
-
     @Override
     public Map<String, Object> process(Map<String, Object> input) {
-        Map<String, Object> result = new HashMap<>();
+        String uiOperation = getStringParam(input, "uiOperation", null); // Operation is required
+        String errorOutputId = "errorMessage";
+
+        Map<String, Object> processingInput = new HashMap<>(input); // Copy for modification
 
         try {
-            String operation = (String) input.getOrDefault("operation", "percentOf");
-
-            // Basic percentage operations
-            if ("percentOf".equals(operation)) {
-                return calculatePercentOf(input);
-            } else if ("percentage".equals(operation)) {
-                return calculatePercentage(input);
-            } else if ("percentageChange".equals(operation)) {
-                return calculatePercentageChange(input);
+            Map<String, Object> result;
+            // Route based on the selected UI operation
+            switch (uiOperation.toLowerCase()) {
+                case "percentof" -> result = calculatePercentOf(processingInput);
+                case "percentage" -> result = calculatePercentage(processingInput);
+                case "percentagechange" -> result = calculatePercentageChange(processingInput);
+                case "compoundinterest" -> result = calculateCompoundInterest(processingInput);
+                case "simpleinterest" -> result = calculateSimpleInterest(processingInput);
+                case "loanpayment" -> result = calculateLoanPayment(processingInput);
+                case "savingsgoal" -> result = calculateSavingsGoal(processingInput);
+                case "getcurrentrates" -> result = getCurrentInterestRates();
+                case "convertcurrency" -> result = convertCurrency(processingInput);
+                case "getexchangerates" -> result = getExchangeRates(processingInput);
+                default -> {
+                    return Map.of("success", false, errorOutputId, "Unsupported operation: " + uiOperation);
+                }
             }
 
-            // Financial operations
-            else if ("compoundInterest".equals(operation)) {
-                return calculateCompoundInterest(input);
-            } else if ("simpleInterest".equals(operation)) {
-                return calculateSimpleInterest(input);
-            } else if ("loanPayment".equals(operation)) {
-                return calculateLoanPayment(input);
-            } else if ("savingsGoal".equals(operation)) {
-                return calculateSavingsGoal(input);
-            } else if ("getCurrentRates".equals(operation)) {
-                return getCurrentInterestRates();
-            }
-
-            // Currency operations
-            else if ("convertCurrency".equals(operation)) {
-                return convertCurrency(input);
-            } else if ("getExchangeRates".equals(operation)) {
-                return getExchangeRates(input);
-            }
-
-            else {
-                result.put("error", "Unsupported operation: " + operation);
+            // Add uiOperation to success result for context
+            if (result.get("success") == Boolean.TRUE) {
+                Map<String, Object> finalResult = new HashMap<>(result);
+                finalResult.put("uiOperation", uiOperation);
+                return finalResult;
+            } else {
+                // Ensure error key consistency
+                if (result.containsKey("error") && !result.containsKey(errorOutputId)) {
+                    Map<String, Object> finalResult = new HashMap<>(result);
+                    finalResult.put(errorOutputId, result.get("error"));
+                    finalResult.remove("error");
+                    return finalResult;
+                }
                 return result;
             }
 
-        } catch (Exception e) {
-            result.put("error", "Error processing request: " + e.getMessage());
+        } catch (IllegalArgumentException e) { // Catch validation errors
+            return Map.of("success", false, errorOutputId, e.getMessage());
+        } catch (Exception e) { // Catch unexpected errors
+            System.err.println("Error processing percentage request: " + e.getMessage());
             e.printStackTrace();
+            return Map.of("success", false, errorOutputId, "Unexpected error: " + e.getMessage());
         }
-
-        return result;
     }
 
-    /**
-     * Calculate what X% of Y is
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
+    // ========================================================================
+    // Private Calculation Methods (Updated for new IDs)
+    // ========================================================================
+
     private Map<String, Object> calculatePercentOf(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double percentage = parseDouble(input.get("percentage"));
-            double value = parseDouble(input.get("value"));
+            double percentage = parseDoubleParam(input, "percentage", null); // Required
+            double value = parseDoubleParam(input, "value", null); // Required
 
             double calculatedValue = (percentage / 100.0) * value;
 
             result.put("success", true);
-            result.put("percentage", percentage);
-            result.put("value", value);
-            result.put("result", calculatedValue);
-            result.put("formattedResult", DEFAULT_FORMAT.format(calculatedValue));
-            result.put("formula", percentage + "% × " + DEFAULT_FORMAT.format(value) +
-                    " = " + DEFAULT_FORMAT.format(calculatedValue));
+            // Keys match output IDs
+            result.put("basic_result", DEFAULT_FORMAT.format(calculatedValue));
+            result.put("formula", String.format(Locale.US, "%.2f%% × %,.2f = %,.2f", percentage, value, calculatedValue));
 
-        } catch (Exception e) {
-            result.put("error", "Error calculating percentage: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate what percent X is of Y
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculatePercentage(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double value = parseDouble(input.get("value"));
-            double ofValue = parseDouble(input.get("ofValue"));
+            double value = parseDoubleParam(input, "value", null); // Required
+            double ofValue = parseDoubleParam(input, "ofValue", null); // Required
+
+            if (ofValue == 0) throw new IllegalArgumentException("Cannot calculate percentage 'of' zero.");
 
             double percentage = (value / ofValue) * 100.0;
 
             result.put("success", true);
-            result.put("value", value);
-            result.put("ofValue", ofValue);
-            result.put("result", percentage);
-            result.put("formattedResult", PERCENTAGE_FORMAT.format(percentage));
-            result.put("formula", DEFAULT_FORMAT.format(value) + " ÷ " +
-                    DEFAULT_FORMAT.format(ofValue) + " × 100 = " + PERCENTAGE_FORMAT.format(percentage));
+            result.put("basic_result", PERCENTAGE_FORMAT.format(percentage));
+            result.put("formula", String.format(Locale.US, "(%,.2f ÷ %,.2f) × 100 = %,.2f%%", value, ofValue, percentage));
 
-        } catch (Exception e) {
-            result.put("error", "Error calculating percentage: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate percentage increase/decrease
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculatePercentageChange(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double fromValue = parseDouble(input.get("fromValue"));
-            double toValue = parseDouble(input.get("toValue"));
+            double fromValue = parseDoubleParam(input, "fromValue", null); // Required
+            double toValue = parseDoubleParam(input, "toValue", null); // Required
+
+            if (fromValue == 0) {
+                if (toValue == 0) {
+                    result.put("success", true);
+                    result.put("change_percent", PERCENTAGE_FORMAT.format(0.0));
+                    result.put("change_type", "no change");
+                    result.put("change_explanation", "Value remained at zero.");
+                    result.put("formula", "N/A (no change)");
+                } else {
+                    result.put("success", true);
+                    result.put("change_percent", "Infinite / Undefined");
+                    result.put("change_type", toValue > 0 ? "increase" : "decrease");
+                    result.put("change_explanation", "Percentage change from zero is undefined.");
+                    result.put("formula", "N/A (change from zero)");
+                }
+                return result;
+            }
 
             double change = toValue - fromValue;
             double percentageChange = (change / Math.abs(fromValue)) * 100.0;
-
             String changeType = (percentageChange >= 0) ? "increase" : "decrease";
 
             result.put("success", true);
-            result.put("fromValue", fromValue);
-            result.put("toValue", toValue);
-            result.put("change", change);
-            result.put("percentageChange", percentageChange);
-            result.put("formattedPercentageChange", PERCENTAGE_FORMAT.format(Math.abs(percentageChange)));
-            result.put("changeType", changeType);
+            result.put("change_percent", PERCENTAGE_FORMAT.format(Math.abs(percentageChange)));
+            result.put("change_type", changeType);
+            result.put("formula", String.format(Locale.US, "((%,.2f - %,.2f) ÷ |%,.2f|) × 100 = %,.2f%%", toValue, fromValue, fromValue, percentageChange));
+            result.put("change_explanation", String.format(Locale.US, "Value %s by %,.2f%% (%,.2f to %,.2f)", (change >= 0 ? "increased" : "decreased"), Math.abs(percentageChange), fromValue, toValue));
 
-            // Create formula and explanation
-            String formula = "(" + DEFAULT_FORMAT.format(toValue) + " - " +
-                    DEFAULT_FORMAT.format(fromValue) + ") ÷ " + DEFAULT_FORMAT.format(Math.abs(fromValue)) +
-                    " × 100 = " + PERCENTAGE_FORMAT.format(percentageChange);
-
-            String explanation = "The value " + (percentageChange >= 0 ? "increased" : "decreased") +
-                    " by " + PERCENTAGE_FORMAT.format(Math.abs(percentageChange)) +
-                    " from " + DEFAULT_FORMAT.format(fromValue) +
-                    " to " + DEFAULT_FORMAT.format(toValue);
-
-            result.put("formula", formula);
-            result.put("explanation", explanation);
-
-        } catch (Exception e) {
-            result.put("error", "Error calculating percentage change: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate compound interest
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculateCompoundInterest(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double principal = parseDouble(input.get("principal"));
-            double rate = parseDouble(input.get("rate"));
-            double years = parseDouble(input.get("years"));
-            int compoundingPerYear = input.containsKey("compoundingPerYear") ?
-                    Integer.parseInt(input.get("compoundingPerYear").toString()) : 1;
+            double principal = parseDoubleParam(input, "principal", null); // Required
+            double rate = parseDoubleParam(input, "rate", null); // Required
+            double years = parseDoubleParam(input, "years", null); // Required
+            int compoundingPerYear = parseIntParam(input, "compoundingPerYear", 1); // Optional
 
-            // Handle edge cases
-            if (principal <= 0) {
-                result.put("error", "Principal must be greater than zero");
-                return result;
-            }
-            if (years <= 0) {
-                result.put("error", "Years must be greater than zero");
-                return result;
-            }
-            if (compoundingPerYear <= 0) {
-                result.put("error", "Compounding periods must be greater than zero");
-                return result;
-            }
+            if (principal <= 0) throw new IllegalArgumentException("Principal must be positive.");
+            if (years <= 0) throw new IllegalArgumentException("Years must be positive.");
+            if (compoundingPerYear <= 0) throw new IllegalArgumentException("Compounds per year must be positive.");
 
-            // Calculate compound interest: A = P(1 + r/n)^(nt)
             double rateDecimal = rate / 100.0;
-            double base = 1 + (rateDecimal / compoundingPerYear);
-            double exponent = compoundingPerYear * years;
+            double nt = (double) compoundingPerYear * years;
 
-            double futureValue = principal * Math.pow(base, exponent);
+            double futureValue = principal * Math.pow(1 + (rateDecimal / (double) compoundingPerYear), nt);
             double interestEarned = futureValue - principal;
 
-            // Prepare the result with detailed breakdown
-            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.US);
+            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(DEFAULT_LOCALE);
 
             result.put("success", true);
-            result.put("principal", principal);
-            result.put("rate", rate);
-            result.put("rateDecimal", rateDecimal);
-            result.put("years", years);
-            result.put("compoundingPerYear", compoundingPerYear);
-            result.put("totalCompoundingPeriods", exponent);
-            result.put("futureValue", futureValue);
-            result.put("interestEarned", interestEarned);
-            result.put("formattedPrincipal", currencyFormat.format(principal));
-            result.put("formattedFutureValue", currencyFormat.format(futureValue));
-            result.put("formattedInterestEarned", currencyFormat.format(interestEarned));
+            result.put("fin_futureValue", currencyFormat.format(futureValue));
+            result.put("fin_interestEarned", currencyFormat.format(interestEarned));
 
-            // Generate a year-by-year breakdown
+            // Generate yearly breakdown
             List<Map<String, Object>> yearlyBreakdown = new ArrayList<>();
-            double runningPrincipal = principal;
-
-            for (int year = 1; year <= (int)years; year++) {
-                double yearEndValue = principal * Math.pow(base, compoundingPerYear * year);
-                double yearInterest = yearEndValue - runningPrincipal;
-
-                Map<String, Object> yearData = new HashMap<>();
-                yearData.put("year", year);
-                yearData.put("startingBalance", runningPrincipal);
-                yearData.put("endingBalance", yearEndValue);
-                yearData.put("interestEarned", yearInterest);
-                yearData.put("formattedStartingBalance", currencyFormat.format(runningPrincipal));
-                yearData.put("formattedEndingBalance", currencyFormat.format(yearEndValue));
-                yearData.put("formattedInterestEarned", currencyFormat.format(yearInterest));
-
-                yearlyBreakdown.add(yearData);
-                runningPrincipal = yearEndValue;
+            double runningBalance = principal;
+            for (int year = 1; year <= (int)Math.ceil(years); year++) {
+                double endBalance = principal * Math.pow(1 + (rateDecimal / (double) compoundingPerYear), (double) compoundingPerYear * year);
+                double yearInterest = endBalance - runningBalance;
+                yearlyBreakdown.add(Map.of(
+                        "year", year,
+                        "formattedStartingBalance", currencyFormat.format(runningBalance),
+                        "formattedInterestEarned", currencyFormat.format(yearInterest),
+                        "formattedEndingBalance", currencyFormat.format(endBalance)
+                ));
+                runningBalance = endBalance;
             }
+            result.put("fin_yearlyBreakdown", yearlyBreakdown); // Key matches output ID
 
-            result.put("yearlyBreakdown", yearlyBreakdown);
+            result.put("formula", String.format(Locale.US, "FV = P(1 + r/n)^(nt) = %,.2f(1 + %.4f/%d)^(%d×%.2f)", principal, rateDecimal, compoundingPerYear, compoundingPerYear, years));
 
-            // Create formula
-            String formula = "A = " + currencyFormat.format(principal) + " × (1 + " +
-                    (rate / 100.0) + "/" + compoundingPerYear + ")^(" + compoundingPerYear +
-                    " × " + years + ")";
-
-            result.put("formula", formula);
-
-        } catch (Exception e) {
-            result.put("error", "Error calculating compound interest: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate simple interest
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculateSimpleInterest(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double principal = parseDouble(input.get("principal"));
-            double rate = parseDouble(input.get("rate"));
-            double years = parseDouble(input.get("years"));
+            double principal = parseDoubleParam(input, "principal", null);
+            double rate = parseDoubleParam(input, "rate", null);
+            double years = parseDoubleParam(input, "years", null);
 
-            // Handle edge cases
-            if (principal <= 0) {
-                result.put("error", "Principal must be greater than zero");
-                return result;
-            }
-            if (years <= 0) {
-                result.put("error", "Years must be greater than zero");
-                return result;
-            }
+            if (principal <= 0) throw new IllegalArgumentException("Principal must be positive.");
+            if (years <= 0) throw new IllegalArgumentException("Years must be positive.");
 
-            // Calculate simple interest: A = P(1 + rt)
             double rateDecimal = rate / 100.0;
             double interestEarned = principal * rateDecimal * years;
             double futureValue = principal + interestEarned;
 
-            // Prepare the result with detailed breakdown
-            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.US);
+            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(DEFAULT_LOCALE);
 
             result.put("success", true);
-            result.put("principal", principal);
-            result.put("rate", rate);
-            result.put("rateDecimal", rateDecimal);
-            result.put("years", years);
-            result.put("futureValue", futureValue);
-            result.put("interestEarned", interestEarned);
-            result.put("formattedPrincipal", currencyFormat.format(principal));
-            result.put("formattedFutureValue", currencyFormat.format(futureValue));
-            result.put("formattedInterestEarned", currencyFormat.format(interestEarned));
+            result.put("fin_futureValue", currencyFormat.format(futureValue));
+            result.put("fin_interestEarned", currencyFormat.format(interestEarned));
+            result.put("formula", String.format(Locale.US, "Interest = P×r×t = %,.2f × %.4f × %.2f", principal, rateDecimal, years));
 
-            // Create formula
-            String formula = "I = " + currencyFormat.format(principal) + " × " +
-                    (rate / 100.0) + " × " + years;
-
-            result.put("formula", formula);
-
-        } catch (Exception e) {
-            result.put("error", "Error calculating simple interest: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate loan payment
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculateLoanPayment(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double principal = parseDouble(input.get("principal"));
-            double rate = parseDouble(input.get("rate"));
-            double years = parseDouble(input.get("years"));
-            int paymentsPerYear = input.containsKey("paymentsPerYear") ?
-                    Integer.parseInt(input.get("paymentsPerYear").toString()) : 12;
+            double principal = parseDoubleParam(input, "principal", null);
+            double rate = parseDoubleParam(input, "rate", null);
+            double years = parseDoubleParam(input, "years", null);
+            int paymentsPerYear = parseIntParam(input, "paymentsPerYear", 12);
 
-            // Handle edge cases
-            if (principal <= 0) {
-                result.put("error", "Principal must be greater than zero");
-                return result;
-            }
-            if (years <= 0) {
-                result.put("error", "Years must be greater than zero");
-                return result;
-            }
-            if (paymentsPerYear <= 0) {
-                result.put("error", "Payments per year must be greater than zero");
-                return result;
-            }
+            if (principal <= 0) throw new IllegalArgumentException("Principal must be positive.");
+            if (years <= 0) throw new IllegalArgumentException("Years must be positive.");
+            if (paymentsPerYear <= 0) throw new IllegalArgumentException("Payments per year must be positive.");
 
-            // Calculate monthly payment using the formula: M = P[r(1+r)^n]/[(1+r)^n-1]
             double ratePerPeriod = (rate / 100.0) / paymentsPerYear;
-            int totalPayments = (int)(years * paymentsPerYear);
+            double totalPayments = years * paymentsPerYear;
 
             double paymentAmount;
             double totalInterest;
+            double totalCost;
 
-            if (rate == 0) {
-                // For zero interest rate
+            if (ratePerPeriod == 0) { // Handle 0%
                 paymentAmount = principal / totalPayments;
                 totalInterest = 0;
             } else {
-                double numerator = ratePerPeriod * Math.pow(1 + ratePerPeriod, totalPayments);
-                double denominator = Math.pow(1 + ratePerPeriod, totalPayments) - 1;
-
-                paymentAmount = principal * (numerator / denominator);
+                double factor = Math.pow(1 + ratePerPeriod, totalPayments);
+                paymentAmount = principal * (ratePerPeriod * factor) / (factor - 1);
                 totalInterest = (paymentAmount * totalPayments) - principal;
             }
+            totalCost = principal + totalInterest;
 
-            // Prepare the result with detailed breakdown
-            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.US);
+            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(DEFAULT_LOCALE);
 
             result.put("success", true);
-            result.put("principal", principal);
-            result.put("rate", rate);
-            result.put("years", years);
-            result.put("paymentsPerYear", paymentsPerYear);
-            result.put("totalPayments", totalPayments);
-            result.put("paymentAmount", paymentAmount);
-            result.put("totalInterest", totalInterest);
-            result.put("totalCost", principal + totalInterest);
-            result.put("formattedPrincipal", currencyFormat.format(principal));
-            result.put("formattedPaymentAmount", currencyFormat.format(paymentAmount));
-            result.put("formattedTotalInterest", currencyFormat.format(totalInterest));
-            result.put("formattedTotalCost", currencyFormat.format(principal + totalInterest));
+            result.put("fin_paymentAmount", currencyFormat.format(paymentAmount));
+            result.put("fin_totalInterest", currencyFormat.format(totalInterest));
+            result.put("fin_totalCost", currencyFormat.format(totalCost));
 
-            // Create amortization schedule
+            // Generate amortization schedule (simplified sample)
             List<Map<String, Object>> amortizationSchedule = new ArrayList<>();
             double remainingBalance = principal;
+            int numTotalPayments = (int)Math.round(totalPayments);
 
-            for (int paymentNumber = 1; paymentNumber <= totalPayments; paymentNumber++) {
-                double interestPayment = remainingBalance * ratePerPeriod;
-                double principalPayment = paymentAmount - interestPayment;
-
-                // Adjustment for the final payment due to rounding
-                if (paymentNumber == totalPayments) {
-                    principalPayment = remainingBalance;
-                    paymentAmount = principalPayment + interestPayment;
+            for (int pmtNum = 1; pmtNum <= numTotalPayments; pmtNum++) {
+                double interestForPeriod = remainingBalance * ratePerPeriod;
+                double principalForPeriod = paymentAmount - interestForPeriod;
+                if (pmtNum == numTotalPayments && Math.abs(remainingBalance - principalForPeriod) > 0.01) {
+                    principalForPeriod = remainingBalance;
+                    paymentAmount = principalForPeriod + interestForPeriod; // Adjust final payment
                 }
+                remainingBalance -= principalForPeriod;
+                if (remainingBalance < 0.005) remainingBalance = 0.0; // Prevent negative due to rounding
 
-                remainingBalance -= principalPayment;
-
-                // Don't include every single payment to keep the response size reasonable
-                if (paymentNumber <= 3 || paymentNumber > totalPayments - 3 ||
-                        paymentNumber % (paymentsPerYear * 5) == 0) { // Show every 5 years and first/last 3 payments
-
-                    Map<String, Object> paymentData = new HashMap<>();
-                    paymentData.put("paymentNumber", paymentNumber);
-                    paymentData.put("paymentAmount", paymentAmount);
-                    paymentData.put("principalPayment", principalPayment);
-                    paymentData.put("interestPayment", interestPayment);
-                    paymentData.put("remainingBalance", Math.max(0, remainingBalance));
-                    paymentData.put("formattedPaymentAmount", currencyFormat.format(paymentAmount));
-                    paymentData.put("formattedPrincipalPayment", currencyFormat.format(principalPayment));
-                    paymentData.put("formattedInterestPayment", currencyFormat.format(interestPayment));
-                    paymentData.put("formattedRemainingBalance", currencyFormat.format(Math.max(0, remainingBalance)));
-
-                    amortizationSchedule.add(paymentData);
+                if (pmtNum <= 3 || pmtNum > numTotalPayments - 3 || pmtNum <= numTotalPayments - 3 && pmtNum % paymentsPerYear == 0) { // First 3, Last 3, End of Year
+                    amortizationSchedule.add(Map.of(
+                            "paymentNumber", pmtNum,
+                            "formattedPaymentAmount", currencyFormat.format(paymentAmount),
+                            "formattedPrincipalPayment", currencyFormat.format(principalForPeriod),
+                            "formattedInterestPayment", currencyFormat.format(interestForPeriod),
+                            "formattedRemainingBalance", currencyFormat.format(remainingBalance)
+                    ));
                 }
             }
+            result.put("fin_amortizationSchedule", amortizationSchedule);
 
-            result.put("amortizationSchedule", amortizationSchedule);
+            result.put("formula", "PMT = P [r(1+r)^n] / [(1+r)^n - 1]"); // Standard formula notation
 
-        } catch (Exception e) {
-            result.put("error", "Error calculating loan payment: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Calculate savings required for a goal
-     *
-     * @param input Input parameters
-     * @return Calculation result
-     */
     private Map<String, Object> calculateSavingsGoal(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double goal = parseDouble(input.get("goal"));
-            double rate = parseDouble(input.get("rate"));
-            double years = parseDouble(input.get("years"));
-            double initialDeposit = input.containsKey("initialDeposit") ?
-                    parseDouble(input.get("initialDeposit")) : 0;
-            int compoundingPerYear = input.containsKey("compoundingPerYear") ?
-                    Integer.parseInt(input.get("compoundingPerYear").toString()) : 12;
+            double goal = parseDoubleParam(input, "goal", null);
+            double rate = parseDoubleParam(input, "rate", null);
+            double years = parseDoubleParam(input, "years", null);
+            double initialDeposit = parseDoubleParam(input, "initialDeposit", 0.0);
+            int compoundingPerYear = parseIntParam(input, "compoundingPerYear", 12);
 
-            // Handle edge cases
-            if (goal <= 0) {
-                result.put("error", "Goal amount must be greater than zero");
-                return result;
-            }
-            if (years <= 0) {
-                result.put("error", "Years must be greater than zero");
-                return result;
-            }
-            if (compoundingPerYear <= 0) {
-                result.put("error", "Compounding periods must be greater than zero");
-                return result;
-            }
+            if (goal <= 0) throw new IllegalArgumentException("Goal amount must be positive.");
+            if (years <= 0) throw new IllegalArgumentException("Years must be positive.");
+            if (compoundingPerYear <= 0) throw new IllegalArgumentException("Compounds per year must be positive.");
+            if (initialDeposit < 0) throw new IllegalArgumentException("Initial deposit cannot be negative.");
 
-            // Calculate the future value of the initial deposit
             double rateDecimal = rate / 100.0;
-            double futureValueOfInitialDeposit = initialDeposit *
-                    Math.pow(1 + (rateDecimal / compoundingPerYear), years * compoundingPerYear);
+            double r = rateDecimal / compoundingPerYear; // Rate per period
+            double n = years * compoundingPerYear; // Total periods
 
-            // Calculate the additional amount needed
-            double additionalAmountNeeded = goal - futureValueOfInitialDeposit;
+            double fvInitial = initialDeposit * Math.pow(1 + r, n);
+            double remainingGoal = goal - fvInitial;
+            double periodicContribution; // Contribution per compounding period
+            String message;
+            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(DEFAULT_LOCALE);
 
-            // If the initial deposit will grow to exceed the goal, no additional savings are needed
-            if (additionalAmountNeeded <= 0) {
-                NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.US);
-
-                result.put("success", true);
-                result.put("goal", goal);
-                result.put("initialDeposit", initialDeposit);
-                result.put("futureValueOfInitialDeposit", futureValueOfInitialDeposit);
-                result.put("additionalSavingsNeeded", 0);
-                result.put("monthlyContribution", 0);
-                result.put("formattedGoal", currencyFormat.format(goal));
-                result.put("formattedInitialDeposit", currencyFormat.format(initialDeposit));
-                result.put("formattedFutureValueOfInitialDeposit", currencyFormat.format(futureValueOfInitialDeposit));
-                result.put("message", "Your initial deposit will grow to exceed your goal. No additional savings needed!");
-
-                return result;
+            if (remainingGoal <= 0) {
+                periodicContribution = 0;
+                message = String.format(Locale.US, "Initial deposit (%s) will reach goal. No extra savings needed.", currencyFormat.format(initialDeposit));
+            } else {
+                if (r == 0) { periodicContribution = remainingGoal / n; }
+                else { periodicContribution = remainingGoal * (r / (Math.pow(1 + r, n) - 1)); }
+                message = String.format(Locale.US, "Save ~%s per period (%d times/year) to reach goal.", currencyFormat.format(periodicContribution), compoundingPerYear);
             }
-
-            // Calculate required monthly contribution
-            // Using the formula for future value of annuity: FV = PMT * ((1 + r)^n - 1) / r
-            double r = rateDecimal / compoundingPerYear;
-            double n = years * compoundingPerYear;
-            double monthlyContribution = additionalAmountNeeded / ((Math.pow(1 + r, n) - 1) / r);
-
-            // Prepare the result with detailed breakdown
-            NumberFormat currencyFormat = NumberFormat.getCurrencyInstance(Locale.US);
 
             result.put("success", true);
-            result.put("goal", goal);
-            result.put("rate", rate);
-            result.put("years", years);
-            result.put("initialDeposit", initialDeposit);
-            result.put("compoundingPerYear", compoundingPerYear);
-            result.put("futureValueOfInitialDeposit", futureValueOfInitialDeposit);
-            result.put("additionalAmountNeeded", additionalAmountNeeded);
-            result.put("monthlyContribution", monthlyContribution);
-            result.put("formattedGoal", currencyFormat.format(goal));
-            result.put("formattedInitialDeposit", currencyFormat.format(initialDeposit));
-            result.put("formattedFutureValueOfInitialDeposit", currencyFormat.format(futureValueOfInitialDeposit));
-            result.put("formattedAdditionalAmountNeeded", currencyFormat.format(additionalAmountNeeded));
-            result.put("formattedMonthlyContribution", currencyFormat.format(monthlyContribution));
+            // Key matches output ID (assuming "monthly" label is ok for any period)
+            result.put("fin_monthlyContribution", currencyFormat.format(periodicContribution));
+            result.put("fin_message", message); // Key matches output ID
+            result.put("formula", "PMT = FV * [r / ((1+r)^n - 1)]"); // Annuity formula
 
-            // Create explanatory message
-            String message = String.format(
-                    "To reach your goal of %s in %s years with an initial deposit of %s and %.2f%% interest rate, " +
-                            "you need to save %s per month.",
-                    currencyFormat.format(goal),
-                    (int)years,
-                    currencyFormat.format(initialDeposit),
-                    rate,
-                    currencyFormat.format(monthlyContribution)
-            );
-
-            result.put("message", message);
-
-        } catch (Exception e) {
-            result.put("error", "Error calculating savings goal: " + e.getMessage());
-        }
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
+        } catch (Exception e) { result.put("success", false); result.put(errorOutputId, "Calculation error."); }
         return result;
     }
 
-    /**
-     * Get current interest rates from the API
-     *
-     * @return Current interest rates
-     */
     private Map<String, Object> getCurrentInterestRates() {
         Map<String, Object> result = new HashMap<>();
+        long now = System.currentTimeMillis();
 
-        try {
-            // Check if rates are cached and not expired
-            if (!interestRates.isEmpty() &&
-                    (System.currentTimeMillis() - lastInterestRateUpdate) < CACHE_DURATION) {
-                result.put("success", true);
-                result.put("interestRates", interestRates);
-                result.put("source", "U.S. Treasury");
-                result.put("cached", true);
-                return result;
-            }
-
-            // Connect to the API
-            URL url = new URL(INTEREST_RATE_API_URL);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod("GET");
-
-            // Read the response
-            BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
-
-            // Parse the JSON response
-            JsonNode jsonNode = objectMapper.readTree(response.toString());
-            JsonNode dataNode = jsonNode.get("data");
-
-            // Process the data
-            Map<String, Double> rates = new HashMap<>();
-            if (dataNode != null && dataNode.isArray()) {
-                for (JsonNode item : dataNode) {
-                    String securityDesc = item.get("security_desc").asText();
-                    double rate = item.get("avg_interest_rate_amt").asDouble();
-                    rates.put(securityDesc, rate);
-                }
-            }
-
-            // Store rates in cache
-            interestRates = rates;
-            lastInterestRateUpdate = System.currentTimeMillis();
-
-            // Build result
+        if (!interestRatesCache.isEmpty() && (now - lastInterestRateUpdate) < CACHE_DURATION_MS) {
             result.put("success", true);
-            result.put("interestRates", rates);
-            result.put("source", "U.S. Treasury");
-            result.put("timestamp", lastInterestRateUpdate);
-            result.put("cached", false);
-
-        } catch (Exception e) {
-            // If API fails, return default rates
-            Map<String, Double> defaultRates = new HashMap<>();
-            defaultRates.put("Savings Account", 0.06);
-            defaultRates.put("Certificate of Deposit (1 year)", 0.15);
-            defaultRates.put("Certificate of Deposit (5 year)", 0.35);
-            defaultRates.put("30-Year Fixed Mortgage", 3.00);
-            defaultRates.put("15-Year Fixed Mortgage", 2.30);
-            defaultRates.put("Treasury Bill (3 Month)", 0.03);
-            defaultRates.put("Treasury Note (5 Year)", 0.35);
-            defaultRates.put("Treasury Bond (30 Year)", 1.40);
-
-            result.put("success", true);
-            result.put("interestRates", defaultRates);
-            result.put("source", "Default values (API unavailable)");
-            result.put("error", "Failed to fetch current interest rates: " + e.getMessage());
+            result.put("api_interestRates", new HashMap<>(interestRatesCache));
+            result.put("source", "Approximations (Cached)");
+            return result;
         }
 
+        System.out.println("Using default interest rates (API fetch skipped or failed).");
+        Map<String, Double> defaultRates = new LinkedHashMap<>();
+        defaultRates.put("Savings Account (Approx Avg)", 0.45);
+        defaultRates.put("CD - 1 Year (Approx Avg)", 5.00);
+        defaultRates.put("CD - 5 Year (Approx Avg)", 4.50);
+        defaultRates.put("Mortgage - 30 Year Fixed (Approx Avg)", 7.00);
+        defaultRates.put("Treasury Bill - 3 Month (Approx)", 5.25);
+        defaultRates.put("Treasury Note - 10 Year (Approx)", 4.50);
+
+        interestRatesCache.clear();
+        interestRatesCache.putAll(defaultRates);
+        lastInterestRateUpdate = System.currentTimeMillis();
+
+        result.put("success", true);
+        result.put("api_interestRates", defaultRates); // Matches output ID
+        result.put("source", "Default Approximations"); // Matches output ID
         return result;
     }
 
-    /**
-     * Convert currency from one to another
-     *
-     * @param input Input parameters
-     * @return Conversion result
-     */
     private Map<String, Object> convertCurrency(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
         try {
-            double amount = parseDouble(input.get("amount"));
-            String fromCurrency = ((String) input.get("fromCurrency")).toUpperCase();
-            String toCurrency = ((String) input.get("toCurrency")).toUpperCase();
+            double amount = parseDoubleParam(input, "amount", null);
+            String fromCurrency = getStringParam(input, "fromCurrency", null).toUpperCase();
+            String toCurrency = getStringParam(input, "toCurrency", null).toUpperCase();
 
-            // Update exchange rates if needed
-            if (exchangeRates.isEmpty() ||
-                    (System.currentTimeMillis() - lastExchangeRateUpdate) > CACHE_DURATION) {
-                updateExchangeRates("USD"); // Use USD as default base
-            }
+            if (amount <= 0) throw new IllegalArgumentException("Amount must be positive.");
 
-            // Convert currency
-            if (!exchangeRates.containsKey(fromCurrency)) {
-                result.put("error", "Currency not found: " + fromCurrency);
-                return result;
-            }
-            if (!exchangeRates.containsKey(toCurrency)) {
-                result.put("error", "Currency not found: " + toCurrency);
-                return result;
-            }
+            updateExchangeRatesIfNeeded(fromCurrency); // Ensure rates are loaded/cached
 
-            double fromRate = exchangeRates.get(fromCurrency);
-            double toRate = exchangeRates.get(toCurrency);
+            if (!exchangeRatesCache.containsKey(fromCurrency)) throw new IllegalArgumentException("Source currency code unavailable: " + fromCurrency);
+            if (!exchangeRatesCache.containsKey(toCurrency)) throw new IllegalArgumentException("Target currency code unavailable: " + toCurrency);
 
-            // Calculate conversion based on USD rates
-            double amountInUSD = amount / fromRate;
-            double convertedAmount = amountInUSD * toRate;
+            double fromRateToBase = exchangeRatesCache.get(fromCurrency);
+            double toRateFromBase = exchangeRatesCache.get(toCurrency);
 
-            // Format the result
-            NumberFormat sourceCurrencyFormat = NumberFormat.getCurrencyInstance();
-            sourceCurrencyFormat.setCurrency(java.util.Currency.getInstance(fromCurrency));
+            double amountInBase = amount / fromRateToBase;
+            double convertedAmount = amountInBase * toRateFromBase;
+            double effectiveRate = toRateFromBase / fromRateToBase;
 
-            NumberFormat targetCurrencyFormat = NumberFormat.getCurrencyInstance();
-            targetCurrencyFormat.setCurrency(java.util.Currency.getInstance(toCurrency));
+            NumberFormat targetFormat = NumberFormat.getCurrencyInstance(DEFAULT_LOCALE);
+            try { targetFormat.setCurrency(java.util.Currency.getInstance(toCurrency)); }
+            catch (Exception e) { /* Use default locale format */ }
 
             result.put("success", true);
-            result.put("amount", amount);
-            result.put("fromCurrency", fromCurrency);
-            result.put("toCurrency", toCurrency);
-            result.put("convertedAmount", convertedAmount);
-            result.put("exchangeRate", toRate / fromRate);
-            result.put("formattedAmount", sourceCurrencyFormat.format(amount));
-            result.put("formattedConvertedAmount", targetCurrencyFormat.format(convertedAmount));
-            result.put("lastUpdated", lastExchangeRateUpdate);
+            result.put("curr_convertedAmount", targetFormat.format(convertedAmount)); // Matches output ID
+            result.put("curr_exchangeRate", String.format(Locale.US, "%.6f", effectiveRate)); // Matches output ID
+            result.put("source", "Exchange Rate API (possibly cached)"); // Matches output ID
+            result.put("formula", String.format(Locale.US, "Amount × Rate = %,.2f %s × %.6f = %s", amount, fromCurrency, effectiveRate, targetFormat.format(convertedAmount)));
 
-            // Create formula explanation
-            String formula = sourceCurrencyFormat.format(amount) + " × " +
-                    DEFAULT_FORMAT.format(toRate / fromRate) + " = " + targetCurrencyFormat.format(convertedAmount);
-
-            result.put("formula", formula);
-
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
         } catch (Exception e) {
-            result.put("error", "Error converting currency: " + e.getMessage());
+            System.err.println("Currency conversion error: " + e.getMessage());
+            result.put("success", false); result.put(errorOutputId, "Conversion failed. Check codes/API status.");
         }
-
         return result;
     }
 
-    /**
-     * Get exchange rates for a base currency
-     *
-     * @param input Input parameters
-     * @return Exchange rates
-     */
     private Map<String, Object> getExchangeRates(Map<String, Object> input) {
         Map<String, Object> result = new HashMap<>();
-
+        String errorOutputId = "errorMessage";
+        String baseCurrency = getStringParam(input, "baseCurrency", "USD").toUpperCase();
         try {
-            String baseCurrency = input.containsKey("baseCurrency") ?
-                    ((String) input.get("baseCurrency")).toUpperCase() : "USD";
+            updateExchangeRatesIfNeeded(baseCurrency); // Update cache using requested base
 
-            // Update exchange rates if needed
-            if (exchangeRates.isEmpty() ||
-                    (System.currentTimeMillis() - lastExchangeRateUpdate) > CACHE_DURATION) {
-                updateExchangeRates(baseCurrency);
-            }
-
-            // Build result
             result.put("success", true);
-            result.put("baseCurrency", baseCurrency);
-            result.put("rates", exchangeRates);
-            result.put("timestamp", lastExchangeRateUpdate);
+            result.put("api_baseCurrency", baseCurrency); // Matches output ID
+            result.put("api_exchangeRates", new TreeMap<>(exchangeRatesCache)); // Return sorted copy, matches output ID
+            result.put("source", "Exchange Rate API (possibly cached)"); // Matches output ID
 
+        } catch (IllegalArgumentException e) { result.put("success", false); result.put(errorOutputId, e.getMessage());
         } catch (Exception e) {
-            result.put("error", "Error getting exchange rates: " + e.getMessage());
+            System.err.println("Get exchange rates error: " + e.getMessage());
+            result.put("success", false); result.put(errorOutputId, "Could not retrieve rates.");
+            result.put("api_baseCurrency", baseCurrency);
+            result.put("api_exchangeRates", Collections.emptyMap());
         }
-
         return result;
     }
 
-    /**
-     * Update exchange rates from the API
-     *
-     * @param baseCurrency Base currency for rates
-     */
-    private void updateExchangeRates(String baseCurrency) {
+
+    // ========================================================================
+    // Private Helper Methods (API Calls, Parsing, Formatting)
+    // ========================================================================
+
+    private void updateExchangeRatesIfNeeded(String requestedBaseCurrency) {
+        long now = System.currentTimeMillis();
+        // Fetch vs USD for consistent cache, but allow direct fetch if base is requested
+        String fetchBase = "USD";
+        // Trigger update if cache is empty, too old, OR if the requested base isn't in the cache
+        // (The last condition helps if the initial fetch vs USD failed for some reason)
+        boolean needsUpdate = exchangeRatesCache.isEmpty() ||
+                (now - lastExchangeRateUpdate) > CACHE_DURATION_MS ||
+                !exchangeRatesCache.containsKey(requestedBaseCurrency.toUpperCase());
+
+        if (!needsUpdate) {
+            return; // Cache is fresh enough and contains the base
+        }
+
+        System.out.println("Updating exchange rates cache (Fetching Base: " + fetchBase + ")");
         try {
-            // Connect to the API
-            URL url = new URL(EXCHANGE_RATE_API_URL + baseCurrency);
+            URL url = new URI(EXCHANGE_RATE_API_URL + fetchBase).toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
+            connection.setRequestProperty("Accept", "application/json");
+            connection.setConnectTimeout(5000);
+            connection.setReadTimeout(5000);
+            int status = connection.getResponseCode();
+            if (status == 200) {
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                    JsonNode jsonNode = objectMapper.readTree(reader);
+                    JsonNode ratesNode = jsonNode.path("rates"); // Use path for safety
+                    if (ratesNode.isObject()) {
+                        Map<String, Double> rates = new HashMap<>();
+                        ratesNode.fields().forEachRemaining(entry -> rates.put(entry.getKey().toUpperCase(), entry.getValue().asDouble()));
+                        if (!rates.containsKey(fetchBase)) { rates.put(fetchBase, 1.0); } // Ensure base is 1.0
 
-            // Read the response
-            BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                response.append(line);
-            }
-            reader.close();
-
-            // Parse the JSON response
-            JsonNode jsonNode = objectMapper.readTree(response.toString());
-            JsonNode ratesNode = jsonNode.get("rates");
-
-            // Process the rates
-            Map<String, Double> rates = new HashMap<>();
-            if (ratesNode != null && ratesNode.isObject()) {
-                ratesNode.fields().forEachRemaining(entry -> rates.put(entry.getKey(), entry.getValue().asDouble()));
-            }
-
-            // Store rates in cache
-            exchangeRates = rates;
-            lastExchangeRateUpdate = System.currentTimeMillis();
-
+                        exchangeRatesCache.clear();
+                        exchangeRatesCache.putAll(rates);
+                        lastExchangeRateUpdate = System.currentTimeMillis();
+                        System.out.println("Exchange rates cache updated. Count: " + rates.size());
+                    } else throw new IOException("Invalid 'rates' data in API response.");
+                }
+            } else throw new IOException("API request failed with status: " + status);
         } catch (Exception e) {
-            // If API fails, use some default rates
-            Map<String, Double> defaultRates = new HashMap<>();
-            defaultRates.put("USD", 1.0);
-            defaultRates.put("EUR", 0.85);
-            defaultRates.put("GBP", 0.75);
-            defaultRates.put("JPY", 110.0);
-            defaultRates.put("CAD", 1.25);
-            defaultRates.put("AUD", 1.35);
-            defaultRates.put("CNY", 6.45);
-
-            exchangeRates = defaultRates;
-            lastExchangeRateUpdate = System.currentTimeMillis();
-
-            System.err.println("Error fetching exchange rates: " + e.getMessage());
+            System.err.println("Error fetching/updating exchange rates: " + e.getMessage());
+            // If fetch fails, don't wipe potentially stale but usable cache immediately
+            if (exchangeRatesCache.isEmpty()) {
+                System.err.println("Cache empty after fetch failure. Loading defaults.");
+                loadDefaultExchangeRates(); // Load defaults only if cache is empty
+            } else {
+                System.err.println("Using potentially stale exchange rate cache due to fetch failure.");
+                // Reset timer so we try again sooner next time?
+                // lastExchangeRateUpdate = System.currentTimeMillis() - CACHE_DURATION_MS + 60000; // Try again in 1 min
+            }
         }
     }
 
-    /**
-     * Parse a double value from an object
-     *
-     * @param value Object to parse
-     * @return Parsed double
-     * @throws NumberFormatException If the value cannot be parsed
-     */
-    private double parseDouble(Object value) {
-        if (value == null) {
-            throw new NumberFormatException("Value is null");
-        }
+    // Load hardcoded defaults if API fails and cache is empty
+    private void loadDefaultExchangeRates() {
+        System.err.println("Loading hardcoded default exchange rates.");
+        exchangeRatesCache.clear();
+        exchangeRatesCache.put("USD", 1.0);
+        exchangeRatesCache.put("EUR", 0.92);
+        exchangeRatesCache.put("GBP", 0.79);
+        exchangeRatesCache.put("JPY", 150.0);
+        exchangeRatesCache.put("CAD", 1.35);
+        exchangeRatesCache.put("AUD", 1.50);
+        // Add a few more common ones
+        exchangeRatesCache.put("CHF", 0.88);
+        exchangeRatesCache.put("CNY", 7.25);
+        exchangeRatesCache.put("INR", 83.0);
+        lastExchangeRateUpdate = System.currentTimeMillis();
+    }
 
+    // Null default indicates required
+    private double parseDoubleParam(Map<String, Object> input, String key, Double defaultValue) throws IllegalArgumentException {
+        Object value = input.get(key);
+        if (value == null || value.toString().trim().isEmpty()) { // Also check for empty string
+            if (defaultValue != null) return defaultValue;
+            throw new IllegalArgumentException("Missing required numeric parameter: " + key);
+        }
         if (value instanceof Number) {
             return ((Number) value).doubleValue();
         } else {
-            try {
-                return Double.parseDouble(value.toString());
-            } catch (NumberFormatException e) {
-                throw new NumberFormatException("Cannot parse value to number: " + value);
+            try { return Double.parseDouble(value.toString().replace(',', '.')); }
+            catch (NumberFormatException e) {
+                if (defaultValue != null) return defaultValue;
+                throw new IllegalArgumentException("Invalid numeric value for parameter '" + key + "': " + value);
             }
         }
     }
+
+    // Null default indicates required
+    private int parseIntParam(Map<String, Object> input, String key, Integer defaultValue) throws IllegalArgumentException {
+        Object value = input.get(key);
+        if (value == null || value.toString().trim().isEmpty()) { // Also check for empty string
+            if (defaultValue != null) return defaultValue;
+            throw new IllegalArgumentException("Missing required integer parameter: " + key);
+        }
+        if (value instanceof Integer) return (Integer) value;
+        if (value instanceof Number) {
+            double dValue = ((Number) value).doubleValue();
+            if (Math.abs(dValue - Math.round(dValue)) < 0.00001) return (int) Math.round(dValue);
+            else throw new IllegalArgumentException("Non-integer numeric value for integer parameter '" + key + "': " + value);
+        }
+        else {
+            try {
+                double dValue = Double.parseDouble(value.toString().replace(',', '.'));
+                if (Math.abs(dValue - Math.round(dValue)) < 0.00001) return (int) Math.round(dValue);
+                else throw new IllegalArgumentException("Non-integer string value for integer parameter '" + key + "': " + value);
+            } catch (NumberFormatException e) {
+                if (defaultValue != null) return defaultValue;
+                throw new IllegalArgumentException("Invalid integer value for parameter '" + key + "': " + value);
+            }
+        }
+    }
+
+    // Null default indicates required
+    private String getStringParam(Map<String, Object> input, String key, String defaultValue) throws IllegalArgumentException {
+        Object value = input.get(key);
+        if (value == null) {
+            if (defaultValue == null) throw new IllegalArgumentException("Missing required parameter: " + key);
+            return defaultValue;
+        }
+        String strValue = value.toString().trim();
+        if (strValue.isEmpty()) {
+            if (defaultValue == null) throw new IllegalArgumentException("Missing required parameter: " + key);
+            return defaultValue;
+        }
+        return strValue;
+    }
+
 }
